Change to JRE Set.of which is also immutable